hildon-fm (0.17-1) unstable; urgency=low

  * Now using new Connectivity GConf API (N#25139).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 03 Apr 2006 15:03:26 +0300

hildon-fm (0.16-1) unstable; urgency=low

  * Replaced some asserts with proper run-time error checking.
  * Fixed DBus porting bugs (N#22848).
  * Fixed dependency to l10n packages.
  * Fixed logical strings to be in lower case.
  * Added a hack for the UI string bug.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 22 Mar 2006 16:04:47 +0200

hildon-fm (0.15-2) unstable; urgency=low

  * Added build dependency to hildon-libs-dev >= 0.12.0.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 23 Feb 2006 14:26:40 +0200

hildon-fm (0.15-1) unstable; urgency=low

    Luc Pionchon:
  * Moved hildon-file-details-dialog from hildon-libs to hildon-fm.
  * debian/control: removed dependency on hildon-lgpl
  * debian/control: updated dependency on hildon-libs to 0.12.0

    Kimmo:
  * Applied Gdk thread locking code patch from maintenance branch.
  * Applied a patch from Murray Cumming (M#182).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 22 Feb 2006 15:52:01 +0200

hildon-fm (0.13-1) unstable; urgency=low

  * Using hildon_gtk_file_chooser_install_properties instead of private
    _gtk_file_chooser_install_properties and hildon_gtk_file_system_create
    instead of _gtk_file_system_create (N#22558).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 02 Feb 2006 17:54:12 +0200

hildon-fm (0.12-1) unstable; urgency=low

  * Applied quite big patch for minor drag and drop bug (N#15006).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 30 Jan 2006 16:54:48 +0200

hildon-fm (0.11-1) unstable; urgency=low

  * Changed package maintainer.
  * New maintainer -> more minimalist version numbering :P
  * Bug fixes from maintenance branch: N#21746, N#22158.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 25 Jan 2006 16:04:44 +0200
