@@ -1,6 +1,7 @@
 hildon-fm (0.17-1) unstable; urgency=low
 
   * Now using new Connectivity GConf API (N#25139).
+  * Fixed the updating infobanner.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 03 Apr 2006 15:03:26 +0300
 
